# shbot-main

./: README.md  install.sh  pyproject.toml
src/shop_bot/: bot_controller.py
src/shop_bot/bot/: handlers.py  keyboards.py
src/shop_bot/data_manager/: database.py  scheduler.py
src/shop_bot/modules/: xui_api.py
src/shop_bot/webhook_server/: app.py
src/shop_bot/webhook_server/templates/: settings.html
