[project]
name = "vles-shopbot"
version = "2.1.0"
description = "Бот для автоматической продажи VLESS VPN"
requires-python = ">=3.11,<3.15"

dependencies = [
    "aiogram==3.29.1",
    "flask==3.1.1",
    "py3xui==0.7.0",
    "pyotp==2.9.0",
    "python-dotenv==1.1.1",
    "qrcode[pil]==8.2",
    "aiosend==2.1.2",
    "aiohttp==3.9.5",
    "aiohttp-sse-client==0.2.1",
    "pytonconnect==0.3.2"
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pylint",
    "black"
]

[tool.setuptools.packages.find]
where = ["src"]
